<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_perm_intro_buttons"
        android:layout_alignParentTop="true"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:src="@drawable/graphics_intro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/grant_access"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/permission_intro"
            android:textAlignment="textStart"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_perm_intro_learnmore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginStart="18dp"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/learn_more"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_perm_intro_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_perm_intro_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"
            android:minHeight="0dp"
            android:text="@string/cancel_allcaps"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_perm_intro_continue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"
            android:minHeight="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/continue_allcaps"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>
